add markup for menu icon + navbar in index.html file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,22 @@
     />
   </head>
   <body>
-   
+   <!-- Start: Menu -->
+   <div class="menu target">
+     <div class="menu-line menu-line-1"></div>
+     <div class="menu-line menu-line-2"></div>
+   </div>
+   <!-- End: Menu -->
+
+   <!-- Start: Navbar -->
+   <div class="navabr target">
+    <a href="#" class="navb-link">Home</a>
+    <a href="#" class="navb-link">Popular Cars</a>
+    <a href="#" class="navb-link">Video Gallery</a>
+    <a href="#" class="navb-link">Image Gallery</a>
+    <a href="#" class="navb-link">Contact</a>
+   </div>
+   <!-- End: Navbar -->
     <script src="script.js"></script>
   </body>
 </html>
