add section elements * 5 in index.html file

--- a/index.html
+++ b/index.html
@@ -11,22 +11,53 @@
     />
   </head>
   <body>
-   <!-- Start: Menu -->
-   <div class="menu target">
-     <div class="menu-line menu-line-1"></div>
-     <div class="menu-line menu-line-2"></div>
-   </div>
-   <!-- End: Menu -->
+  <!-- Start: Menu -->
+  <div class="menu target">
+    <div class="menu-line menu-line-1"></div>
+    <div class="menu-line menu-line-2"></div>
+  </div>
+  <!-- End: Menu -->
 
-   <!-- Start: Navbar -->
-   <div class="navabr target">
+  <!-- Start: Navbar -->
+  <div class="navabr target">
     <a href="#" class="navb-link">Home</a>
     <a href="#" class="navb-link">Popular Cars</a>
     <a href="#" class="navb-link">Video Gallery</a>
     <a href="#" class="navb-link">Image Gallery</a>
     <a href="#" class="navb-link">Contact</a>
-   </div>
-   <!-- End: Navbar -->
+  </div>
+  <!-- End: Navbar -->
+
+  <!-- Start: Section 1 Home -->
+  <div class="wrapper">
+    <section class="section-1 target"></section>
+  </div>
+  <!-- End: Section 1 Home -->
+
+  <!-- Start: Section 2 Popular Cars -->
+  <div class="wrapper">
+    <section class="section-2 target"></section>
+  </div>
+  <!-- End: Section 1 Popular Cars -->
+
+  <!-- Start: Section 3 Video Gallery -->
+  <div class="wrapper">
+    <section class="section-3 target"></section>
+  </div>
+  <!-- End: Section 3 Video Gallery -->
+
+  <!-- Start: Section 4 Image Gallery -->
+  <div class="wrapper">
+    <section class="section-4 target"></section>
+  </div>
+  <!-- End: Section 4 Image Gallery -->
+
+  <!-- Start: Section 5 Contact -->
+  <div class="wrapper">
+    <section class="section-5 target"></section>
+  </div>
+  <!-- End: Section 5 Contact -->
+
     <script src="script.js"></script>
   </body>
 </html>
