--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
   <!-- End: Menu -->
 
   <!-- Start: Navbar -->
-  <div class="navabr target">
-    <a href="#" class="navb-link">Home</a>
-    <a href="#" class="navb-link">Popular Cars</a>
-    <a href="#" class="navb-link">Video Gallery</a>
-    <a href="#" class="navb-link">Image Gallery</a>
-    <a href="#" class="navb-link">Contact</a>
+  <div class="navbar target">
+    <a href="#" class="navbar-link">Home</a>
+    <a href="#" class="navbar-link">Popular Cars</a>
+    <a href="#" class="navbar-link">Video Gallery</a>
+    <a href="#" class="navbar-link">Image Gallery</a>
+    <a href="#" class="navbar-link">Contact</a>
   </div>
   <!-- End: Navbar -->
 
