add functionality to navbar links + smooth scroll

--- a/index.html
+++ b/index.html
@@ -20,41 +20,41 @@
 
   <!-- Start: Navbar -->
   <div class="navbar target">
-    <a href="#" class="navbar-link">Home</a>
-    <a href="#" class="navbar-link">Popular Cars</a>
-    <a href="#" class="navbar-link">Video Gallery</a>
-    <a href="#" class="navbar-link">Image Gallery</a>
-    <a href="#" class="navbar-link">Contact</a>
+    <a href="#home" class="navbar-link">Home</a>
+    <a href="#popular" class="navbar-link">Popular Cars</a>
+    <a href="#video" class="navbar-link">Video Gallery</a>
+    <a href="#image" class="navbar-link">Image Gallery</a>
+    <a href="#contact" class="navbar-link">Contact</a>
   </div>
   <!-- End: Navbar -->
 
   <!-- Start: Section 1 Home -->
   <div class="wrapper">
-    <section class="section-1 target"></section>
+    <section class="section-1 target" id="home"></section>
   </div>
   <!-- End: Section 1 Home -->
 
   <!-- Start: Section 2 Popular Cars -->
   <div class="wrapper">
-    <section class="section-2 target"></section>
+    <section class="section-2 target" id="popular"></section>
   </div>
   <!-- End: Section 1 Popular Cars -->
 
   <!-- Start: Section 3 Video Gallery -->
   <div class="wrapper">
-    <section class="section-3 target"></section>
+    <section class="section-3 target" id="video"></section>
   </div>
   <!-- End: Section 3 Video Gallery -->
 
   <!-- Start: Section 4 Image Gallery -->
   <div class="wrapper">
-    <section class="section-4 target"></section>
+    <section class="section-4 target" id="image"></section>
   </div>
   <!-- End: Section 4 Image Gallery -->
 
   <!-- Start: Section 5 Contact -->
   <div class="wrapper">
-    <section class="section-5 target"></section>
+    <section class="section-5 target" id="contact"></section>
   </div>
   <!-- End: Section 5 Contact -->
 
