add HTML markup for section-1 in index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
 
   <!-- Start: Section 1 Home -->
   <div class="wrapper">
-    <section class="section-1 target" id="home"></section>
+    <section class="section-1 target" id="home">
+      <h1 class="section-heading section-1-heading">
+        Classic Cars
+      </h1>
+      <img src="images/car-section1.png" alt="Cars Background Image" class="section-1-img">
+    </section>
   </div>
   <!-- End: Section 1 Home -->
 
