refactor css + create common style center in style.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
   <!-- Start: Menu -->
-  <div class="menu target">
+  <div class="menu center target">
     <div class="menu-line menu-line-1"></div>
     <div class="menu-line menu-line-2"></div>
   </div>
@@ -30,7 +30,7 @@
 
   <!-- Start: Section 1 Home -->
   <div class="wrapper">
-    <section class="section-1 target" id="home">
+    <section class="section-1 center target" id="home">
       <h1 class="section-heading section-1-heading">
         Classic Cars
       </h1>
