add HTML markup for section-2 in index.html file

--- a/index.html
+++ b/index.html
@@ -41,7 +41,37 @@
 
   <!-- Start: Section 2 Popular Cars -->
   <div class="wrapper">
-    <section class="section-2 target" id="popular"></section>
+    <section class="section-2 target" id="popular">
+      <h1 class="section-heading">Popular Cars</h1>
+      <div class="cards-wrapper">
+        <!-- Start: Card -->
+        <div class="card">
+          <h2 class="car-name">Car Name</h2>
+          <img src="images/gallery-car-1.jpg" alt="car image" class="card-img">
+          <h3 class="car-price">€ 200,000</h3>
+          <button type="submit" class="card-btn">See More</button>
+        </div>
+        <!-- End: Card -->
+
+        <!-- Start: Card -->
+        <div class="card">
+          <h2 class="car-name">Car Name</h2>
+          <img src="images/gallery-car-2.jpg" alt="car image" class="card-img">
+          <h3 class="car-price">€ 170,000</h3>
+          <button type="submit" class="card-btn">See More</button>
+        </div>
+        <!-- End: Card -->
+
+        <!-- Start: Card -->
+        <div class="card">
+          <h2 class="car-name">Car Name</h2>
+          <img src="images/gallery-car-3.jpg" alt="car image" class="card-img">
+          <h3 class="car-price">€ 150,000</h3>
+          <button type="submit" class="card-btn">See More</button>
+        </div>
+        <!-- End: Card -->
+      </div>
+    </section>
   </div>
   <!-- End: Section 1 Popular Cars -->
 
