--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div class="wrapper">
     <section class="section-2 target" id="popular">
       <h1 class="section-heading">Popular Cars</h1>
-      <div class="cards-wrapper">
+      <div class="cards-wrapper center">
         <!-- Start: Card -->
         <div class="card">
           <h2 class="car-name">Car Name</h2>
