add markup for section-3 in index.html file

--- a/index.html
+++ b/index.html
@@ -77,13 +77,32 @@
 
   <!-- Start: Section 3 Video Gallery -->
   <div class="wrapper">
-    <section class="section-3 target" id="video"></section>
+    <section class="section-3 target" id="video">
+      <h1 class="section-heading">Video Gallery</h1>
+      <!-- Start: Video Wrapper -->
+      <div class="video-wrapper">
+        <video src="images/car-video-1.mp4" muted loop width="500" class="video"></video>
+        <video src="images/car-video-2.mp4" muted loop width="500" class="video"></video>
+        <video src="images/car-video-3.mp4" muted loop width="500" class="video"></video>
+      </div>      
+      <!-- End: Video Wrapper -->
+
+      <!-- Start: Video Wrapper -->
+      <div class="video-wrapper">
+        <video src="images/car-video-4.mp4" muted loop width="500" class="video"></video>
+        <video src="images/car-video-5.mp4" muted loop width="500" class="video"></video>
+        <video src="images/car-video-6.mp4" muted loop width="500" class="video"></video>
+      </div>
+      <!-- End: Video Wrapper -->
+    </section>
   </div>
   <!-- End: Section 3 Video Gallery -->
 
   <!-- Start: Section 4 Image Gallery -->
   <div class="wrapper">
-    <section class="section-4 target" id="image"></section>
+    <section class="section-4 target" id="image">
+      
+    </section>
   </div>
   <!-- End: Section 4 Image Gallery -->
 
