add styles to section-3 content in style.css file

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <section class="section-3 target" id="video">
       <h1 class="section-heading">Video Gallery</h1>
       <!-- Start: Video Wrapper -->
-      <div class="video-wrapper">
+      <div class="video-wrapper center">
         <video src="images/car-video-1.mp4" muted loop width="500" class="video"></video>
         <video src="images/car-video-2.mp4" muted loop width="500" class="video"></video>
         <video src="images/car-video-3.mp4" muted loop width="500" class="video"></video>
@@ -88,7 +88,7 @@
       <!-- End: Video Wrapper -->
 
       <!-- Start: Video Wrapper -->
-      <div class="video-wrapper">
+      <div class="video-wrapper center">
         <video src="images/car-video-4.mp4" muted loop width="500" class="video"></video>
         <video src="images/car-video-5.mp4" muted loop width="500" class="video"></video>
         <video src="images/car-video-6.mp4" muted loop width="500" class="video"></video>
