--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- Start: Card -->
         <div class="card">
           <h2 class="car-name">Car Name</h2>
-          <img src="images/gallery-car-1.jpg" alt="car image" class="card-img">
+          <img src="images/car-1.jpg" alt="car image" class="card-img">
           <h3 class="car-price">€ 200,000</h3>
           <button type="submit" class="card-btn">See More</button>
         </div>
@@ -56,7 +56,7 @@
         <!-- Start: Card -->
         <div class="card">
           <h2 class="car-name">Car Name</h2>
-          <img src="images/gallery-car-2.jpg" alt="car image" class="card-img">
+          <img src="images/car-2.jpg" alt="car image" class="card-img">
           <h3 class="car-price">€ 170,000</h3>
           <button type="submit" class="card-btn">See More</button>
         </div>
@@ -65,7 +65,7 @@
         <!-- Start: Card -->
         <div class="card">
           <h2 class="car-name">Car Name</h2>
-          <img src="images/gallery-car-3.jpg" alt="car image" class="card-img">
+          <img src="images/car-3.jpg" alt="car image" class="card-img">
           <h3 class="car-price">€ 150,000</h3>
           <button type="submit" class="card-btn">See More</button>
         </div>
