add HTML markup for section-4 in index.html file

--- a/index.html
+++ b/index.html
@@ -101,7 +101,24 @@
   <!-- Start: Section 4 Image Gallery -->
   <div class="wrapper">
     <section class="section-4 target" id="image">
-      
+      <h1 class="section-heading">Image Gallery</h1>
+      <!-- Start: Gallery picture + shelf -->
+      <div class="gallery">
+        <div class="gallery-shelf"></div>
+        <img src="images/gallery-car-1.jpg" alt="gallery image" class="gallery-img-1">
+        <img src="images/gallery-car-2.jpg" alt="gallery image" class="gallery-img-2">
+        <img src="images/gallery-car-3.jpg" alt="gallery image" class="gallery-img-3">
+      </div>
+      <!-- End: Gallery picture + shelf -->
+
+      <!-- Start: Gallery picture + shelf -->
+      <div class="gallery">
+        <div class="gallery-shelf"></div>
+        <img src="images/gallery-car-4.jpg" alt="gallery image" class="gallery-img-1">
+        <img src="images/gallery-car-5.jpg" alt="gallery image" class="gallery-img-2">
+        <img src="images/gallery-car-6.jpg" alt="gallery image" class="gallery-img-3">
+      </div>
+      <!-- End: Gallery picture + shelf -->
     </section>
   </div>
   <!-- End: Section 4 Image Gallery -->
