add style to section-4 + create 3d shelf in style.css file

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <section class="section-4 target" id="image">
       <h1 class="section-heading">Image Gallery</h1>
       <!-- Start: Gallery picture + shelf -->
-      <div class="gallery">
+      <div class="gallery center">
         <div class="gallery-shelf"></div>
         <img src="images/gallery-car-1.jpg" alt="gallery image" class="gallery-img-1">
         <img src="images/gallery-car-2.jpg" alt="gallery image" class="gallery-img-2">
@@ -112,7 +112,7 @@
       <!-- End: Gallery picture + shelf -->
 
       <!-- Start: Gallery picture + shelf -->
-      <div class="gallery">
+      <div class="gallery center">
         <div class="gallery-shelf"></div>
         <img src="images/gallery-car-4.jpg" alt="gallery image" class="gallery-img-1">
         <img src="images/gallery-car-5.jpg" alt="gallery image" class="gallery-img-2">
