add markup for section-5 in index.html file

--- a/index.html
+++ b/index.html
@@ -125,7 +125,18 @@
 
   <!-- Start: Section 5 Contact -->
   <div class="wrapper">
-    <section class="section-5 target" id="contact"></section>
+    <section class="section-5 target" id="contact">
+      <h1 class="section-heading">Contact Us</h1>
+      <form action="#" class="contact-form">
+        <input type="text" class="form-input" placeholder="Enter Your Full Name">
+        <input type="email" class="form-input" placeholder="Enter Your Email">
+        <textarea class="form-input" Enter Your Message></textarea>
+        <input type="submit" value="Submit" class="form-btn">
+      </form>
+      <p class="copyright">
+        Copyright &copy; GoToDesign All Rights Reserved.
+      </p>
+    </section>
   </div>
   <!-- End: Section 5 Contact -->
 
