style + add background img to section-5 element in style.css

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <form action="#" class="contact-form">
         <input type="text" class="form-input" placeholder="Enter Your Full Name">
         <input type="email" class="form-input" placeholder="Enter Your Email">
-        <textarea class="form-input" Enter Your Message></textarea>
+        <textarea class="form-input" placeholder="Enter Your Message"></textarea>
         <input type="submit" value="Submit" class="form-btn">
       </form>
       <p class="copyright">
